<resources>
    <string name="app_name">Contacts</string>
    <string name="contacts">Contacts</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>