<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddContactActivity"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImg"
            android:layout_width="120dp"
            android:layout_height="120dp"

            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/user"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rl"

        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:src="@drawable/ic_person"
                app:tint="@color/black"
                android:contentDescription="@string/app_name" />

            <EditText
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/first_name"
                android:textColorHint="@color/grey"
                android:padding="10dp"
                android:paddingEnd="15dp"
                android:paddingStart="15dp"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:inputType="text"
                android:autofillHints="" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:contentDescription="@string/app_name" />

            <EditText
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/last_name"
                android:textColorHint="@color/grey"
                android:padding="10dp"
                android:paddingEnd="15dp"
                android:paddingStart="15dp"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:inputType="text"
                android:autofillHints="" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:src="@drawable/ic_phone"
                app:tint="@color/black"
                android:contentDescription="@string/app_name" />

            <EditText
                android:id="@+id/phoneNum"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/phone"
                android:textColorHint="@color/grey"
                android:padding="10dp"
                android:paddingEnd="15dp"
                android:paddingStart="15dp"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:inputType="phone"
                android:autofillHints="" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="30dp"
                android:src="@drawable/ic_email"
                app:tint="@color/black"
                android:contentDescription="@string/app_name" />

            <EditText
                android:id="@+id/emaiL"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/email"
                android:textColorHint="@color/grey"
                android:padding="10dp"
                android:paddingEnd="15dp"
                android:paddingStart="15dp"
                android:textSize="17sp"
                android:textColor="@color/black"
                android:inputType="textEmailAddress"
                android:autofillHints="" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/ll"
        tools:layout_editor_absoluteX="0dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelBtn"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:padding="15sp"
            android:text="@string/cancel"
            android:layout_marginEnd="15dp"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:backgroundTint="@color/primaryColor"
            app:cornerRadius="12dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveBtn"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:padding="15sp"
            android:text="@string/save"
            android:layout_marginStart="15dp"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:backgroundTint="@color/primaryColor"
            app:cornerRadius="12dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


